--- a/cocktail/src/components/instructions/instructions.css
+++ b/cocktail/src/components/instructions/instructions.css
@@ -1,11 +1,12 @@
-#MainPageSelecting{
+#recipe{
     text-align: center;
     margin: auto;
-    color: black;
+    
 }
 
-#Head{
+#tablecocktail{ 
     text-align: center;
     margin: auto;
     color: black;
+
 }
