--- a/cocktail/src/containers/Matchintersection/Matchintersection.css
+++ b/cocktail/src/containers/Matchintersection/Matchintersection.css
@@ -1,18 +1,11 @@
-#tableallcocktails{
+#Recipematch{
     text-align: center;
     margin: auto;
     color: black;
 }
 
-#information{
+#cocktaillist{
     text-align: center;
     margin: auto;
     color: black;
-}
-
-#cocktailtable{
-    text-align: center;
-    margin: auto;
-    color: black;
-
 }
